--- a/targets/flash/MonkeyGame.html
+++ b/targets/flash/MonkeyGame.html
@@ -4,13 +4,9 @@
 
 <body>
 
-<object width="640" height="480">
-
-<embed src="MonkeyGame.swf" width="640" height="480">
+<embed src="MonkeyGame.swf" width="640" height="480" wmode="direct">
 
 </embed>
-
-</object>
 
 </body>
 
