--- a/targets/flash/MonkeyGame.html
+++ b/targets/flash/MonkeyGame.html
@@ -4,7 +4,7 @@
 
 <body>
 
-<embed src="MonkeyGame.swf" width="640" height="480" wmode="direct">
+<embed src="MonkeyGame.swf" type="application/x-shockwave-flash" width="640" height="480" wmode="direct">
 
 </embed>
 
